recursion.logo.tree.Tree.scala.error
Erreur de compilation :
Tree:12: error: not found: value reculer
    reculer(length)
    ^